Commit crawler
